force-app/main/default/objects/Pipeline__c/fields/Days_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Close__c</fullName>
    <formula>IF(NOT(ISNULL(Closing_Date__c)), Closing_Date__c -  Log_In_Date__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>