force-app/main/default/objects/Pipeline__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Reason for Decline</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit / Financial Issues</fullName>
            </value>
            <value>
                <fullName>Business Uncertainty</fullName>
            </value>
            <value>
                <fullName>Company Too Small</fullName>
            </value>
            <value>
                <fullName>Lack of Audit</fullName>
            </value>
            <value>
                <fullName>Lack of Industry Fit</fullName>
            </value>
            <value>
                <fullName>Not a Good Fit</fullName>
            </value>
            <value>
                <fullName>Not Met Investment Criteria</fullName>
            </value>
            <value>
                <fullName>Operational Issues</fullName>
            </value>
            <value>
                <fullName>Outbid</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Structure</fullName>
            </value>
            <value>
                <fullName>Valuation Expectations</fullName>
            </value>
            <value>
                <fullName>Weak Investment Thesis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>