force-app/main/default/objects/Pipeline__c/fields/Decline_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Sub_Reason__c</fullName>
    <label>Decline Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Investment Strategy</fullName>
            </value>
            <value>
                <fullName>Ownership Structure</fullName>
            </value>
            <value>
                <fullName>Sector</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>