force-app/main/default/objects/Pipeline__c/fields/First_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Bid_Amount__c</fullName>
    <label>First Bid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>