force-app/main/default/objects/Pipeline__c/fields/First_Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bid_Date__c</fullName>
    <label>First Bid Date</label>
    <type>Date</type>
</CustomField>