force-app/main/default/objects/Pipeline__c/fields/First_Bid_Rationale__c.field-meta.xml
<CustomField>
    <fullName>First_Bid_Rationale__c</fullName>
    <label>First Bid Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>