force-app/main/default/objects/Pipeline__c/fields/LOI_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>LOI_Deadline_Date__c</fullName>
    <label>LOI Deadline Date</label>
    <type>Date</type>
</CustomField>