force-app/main/default/objects/Pipeline__c/fields/NDA_Documents__c.field-meta.xml
<CustomField>
    <fullName>NDA_Documents__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/NavatarDocuments?recordId=&quot;&amp;Id&amp;&quot;&amp;showBtn=true&amp;Box_FRUP_Record_Field=Id&amp;TaggedFromField=navpeII__NDA_Signed_Date__c&quot;, IMAGE(&quot;https://pe4509--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0683h000002ZPd7&amp;operationContext=CHATTER&amp;contentId=05T3h00000GDnhz&quot;, &quot;Documents&quot;, 25, 124), &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDA</label>
    <type>Text</type>
</CustomField>