force-app/main/default/objects/Pipeline__c/fields/Pre_Clearance_Expense__c.field-meta.xml
<CustomField>
    <fullName>Pre_Clearance_Expense__c</fullName>
    <label>Pre-Clearance Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>