force-app/main/default/objects/Pipeline__c/fields/Second_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Second_Bid_Amount__c</fullName>
    <label>Second Bid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>