force-app/main/default/objects/Pipeline__c/fields/Second_Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Bid_Date__c</fullName>
    <label>Second Bid Date</label>
    <type>Date</type>
</CustomField>