force-app/main/default/objects/Pipeline__c/fields/Second_Bid_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Second_Bid_Rationale__c</fullName>
    <label>Second Bid Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>