force-app/main/default/objects/Pipeline__c/fields/Watchlist__c.field-meta.xml
<CustomField>
    <fullName>Watchlist__c</fullName>
    <formula>IF(ISPICKVAL(Company__r.Status__c, &quot;Watchlist&quot;),True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Watchlist</label>
    <type>Checkbox</type>
</CustomField>